# shapeyourcity_scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
src/shapeyourcity/: get_data.py  process_data.py
tests/: test_get_data.py
