[tool.poetry]
name = "shapeyourcity-scraper"
version = "0.1.0"
description = ""
authors = ["Caralyn Reisle <caralynreisle@gmail.com>"]
readme = "README.md"
packages = [{ include = "shapeyourcity", from = "src" }]


[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
seaborn = "^0.13.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
selenium = "4.15.2"
requests-cache = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
